Update gitconfig, gitignore

--- a/.gitconfig
+++ b/.gitconfig
@@ -9,6 +9,7 @@
     tag = tag -l
     branch = branch -a
     remote = remote -v
+    rh = reset HEAD --
 [core]
     editor = vim
     autocrlf = input
